# Greedy-Algorithm-for-Parcel-Loading

./: .gitignore  CMakeLists.txt  Delivery Truck Algorithm.cpp  LICENSE  Optimized (First Fit Decreasing) Delivery Truck Algorithm.cpp  Optimized (First Fit Increasing) Delivery Truck Algorithm.cpp  README.md  Unoptimized Simple Delivery Truck Algorithm.cpp  Utility Functions .cpp  Utility Functions .h
